# NeuroContact

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
NeuroContact/: settings.py  urls.py
app_datascience/: urls.py  utils.py  views.py
app_datascience/static/app_datascience/css/: datascience_style.css
app_datascience/templates/app_datascience/: data_science.html
app_main/templates/app_main/: about_application.html  about_team.html  base.html
app_predict/: models.py  tens_check.py  urls.py  views.py
app_predict/migrations/: 0001_initial.py
app_predict/model/: app_predict.py
app_predict/model/model_notebooks/: DenseNet121_cifar10_model_ver_0.3.ipynb  DenseNet121_cifar10_model_ver_Mentor.ipynb  Inception_cifar10_model_ver_0.9.ipynb  Inception_cifar10_v0.3.ipynb  ResNet50_cifar10_model_ver_0.1.ipynb  Sequential_cifar10_model_ver_0.2.ipynb  VGG16_cifar10_model_ver_0.1.ipynb  Xception_cifar10_model_ver_0.1.ipynb
app_predict/templates/app_predict/: main.html
staticfiles/app_predict/: predict.css
