[tool.poetry]
name = "neurocontact"
version = "0.1.0"
description = ""
authors = ["Serg <https://github.com/CodeCraftSerg>", "Olha <https://github.com/HelgaTsar>", "Iurii Popov <https://github.com/ShuguruiUA>", "Aryna Reutska <https://github.com/xrendezvous>", "Kris <https://github.com/Krisiris250592>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.11.6"
black = "^24.4.0"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
environ = "^1.0"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
cloudinary = "^1.40.0"
django-cloudinary-storage = "^0.3.0"
django-session-timeout = "^0.1.0"
six = "^1.16.0"
pip = "^24.0"
tensorflow-io-gcs-filesystem = { version = "0.31.0"}
tensorflow = "2.16.1"
keras = "3.5.0"
pillow = "10.4.0"
gdown = "^5.2.0"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
